- Added Miners' Gear to the loot table of Tunnel Rat Digger for the quest Filthy Paws.
- Updated the flags of Miners' Gear to allow every member of a group to loot it.

[2022-06-25]
- Updated the respawn time of Clara's Fresh Apples.

[2022-06-29]
- Added Incendia Agave to the loot table of Scalding Elemental for the quest Sacred Fire.
- Added Incendia Agave to the loot table of Boiling Elemental for the quest Sacred Fire.
- Updated the flags of Incendia Agave to allow every member of a group to loot it.
- Added Rocket Car Parts to the loot table of Scorpid Terror for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Scorpid Reaver for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Sparkleshell Tortoise for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Sparkleshell Snapper for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Sparkleshell Borer for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Saltstone Basilisk for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Saltstone Gazer for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Saltstone Crystalhide for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Salt Flats Scavenger for the quest Rocket Car Parts.
- Added Rocket Car Parts to the loot table of Salt Flats Vulture for the quest Rocket Car Parts.
- Updated the flags of Rocket Car Parts to allow every member of a group to loot it.

[2022-07-01]
- Added Dark Iron Pillow to the loot table of Dark Iron Slaver for the quest Kill 'Em With Sleep Deprivation.
- Added Dark Iron Pillow to the loot table of Dark Iron Taskmaster for the quest Kill 'Em With Sleep Deprivation.
- Added Dark Iron Pillow to the loot table of Dark Iron Lookout for the quest Kill 'Em With Sleep Deprivation.
- Updated the flags of Dark Iron Pillow to allow every member of a group to loot it.